# WealthPassword

./: .gitignore  LICENSE  README.md  pyproject.toml
MQL5/: checkNewCandle.ex5  checkNewCandle.mq5
Notes/: QuantStudies.tex
Scripts/: ETHUSDT-1h-2020-12.csv  ETHUSDT-1h-2021-01.csv  ETHUSDT-1h-2021-02.csv  ETHUSDT-1h-2021-03.csv  ETHUSDT-1h-2021-04.csv  ETHUSDT-1h-2021-05.csv  Valpha.py  alchemist.py  backtester.py  backtraderTest.py  backtraderTest_A.py  backtraderTest_single.py  binanceBot.py  binanceTest.py  binanceTest2.py  bn3ema.py  bybitBot.py  param_comb.json  screener.py  stopROE.json  takeProfit.py
Scripts/BinanceBot/: bn3ema.py  config.py  fetchPairs.py  pairs.json  teleBot.py
Scripts/EastMoneyAPI/: dataPrep.py
kyws/: __init__.py  alchemist.py  backtraderTest_multi.py  binanceBot.py  binanceTest2.py  binanceTest_2ema.py  bybitBot.py  bybitBot_BTC.py  screener.py  screener_div_backup.py  screener_tushare.py
kyws/BinanceBot/: bn3ema_backup.py
kyws/DrXiongAPI/: dataPrep.py
